making Deactivate() stop making the window visible, which occasionally caused reactivation problems and bug 78364, among others. r=hyatt,pinkerton