dom/src/base/nsGlobalWindow.cpp
@@ -2825,11 +2825,6 @@ NS_IMETHODIMP GlobalWindowImpl::Activate()
 
 NS_IMETHODIMP GlobalWindowImpl::Deactivate()
 {
-  nsCOMPtr<nsIBaseWindow> treeOwnerAsWin;
-  GetTreeOwner(getter_AddRefs(treeOwnerAsWin));
-  if (treeOwnerAsWin)
-    treeOwnerAsWin->SetVisibility(PR_TRUE);
-
   nsCOMPtr<nsIPresShell> presShell;
   mDocShell->GetPresShell(getter_AddRefs(presShell));
   NS_ENSURE_TRUE(presShell, NS_ERROR_FAILURE);
